# hack-bulgaria-homeworks

./: README.md
0-makefiles/: Makefile  Makefile.in  config.status  configure  configure.ac
0-makefiles/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
0-makefiles/doc/: Makefile.am  Makefile.in
0-makefiles/examples/: Makefile.in
0-makefiles/man/: Makefile.in
0-makefiles/scripts/: Makefile.in
0-makefiles/src/: Makefile.am
1-really-really-easy-tasks/: mm-file.txt  one-arg-and-prints-it  one-arg-and-prints-it.c  reads-word-and-prints-it  reads-word-and-prints-it.c  reads-word-and-writes-it-in-file  reads-word-and-writes-it-in-file.c  rrr.txt
2-beginer-tasks/: copy-file-to  copy-file-to.c  read-file-and-print-it  read-file-and-print-it.c
2-beginer-tasks/copy-to/: file.txt
3-mormal-tasks/: move-file-from-one-dir-to-another  move-file-from-one-dir-to-another.c  print-something-on-some-event  print-something-on-some-event.c
4/: speakers.c  usb-skeleton.c.save  usb.c.save
week2/: 1-interesting-task.c  1-read-file-in-buffer  1-read-file-in-buffer.c  malloc-test.c  read-endless-string  read-endless-string.c  test.c  text.txt
